--- a/src/css/fab.less
+++ b/src/css/fab.less
@@ -14,7 +14,7 @@
   }
 
   .fab-button {
-    .gotham();
+    .lato();
     background: @accent;
     background: var(--accent);
     position: relative;
