--- a/src/partials/_sponsorship.html
+++ b/src/partials/_sponsorship.html
@@ -56,23 +56,30 @@ lastNode.parentNode.insertBefore(geoEdge, lastNode);
     var isStagingServer = 'false';
 
     window.googletag = window.googletag || {cmd: []};
+    googletag.cmd.push(function() {
+      googletag.pubads().enableSingleRequest();
+      googletag.pubads().collapseEmptyDivs();
+      googletag.pubads().setTargeting('testserver', [isStagingServer]);
 
-    [ 'ad-centerstage-wrap', 'ad-secondary-wrap' ].forEach(function(adSlot) {
-      googletag.cmd.push(function() {
-        googletag.defineSlot(adUnitString, adSizeArray, adSlot).addService(googletag.pubads());
-        googletag.pubads().enableSingleRequest();
-        googletag.pubads().collapseEmptyDivs();
-        googletag.pubads().setTargeting('ad_location_name', 'story_centerstage');
-        googletag.pubads().setTargeting('testserver', [ isStagingServer ]);
-        googletag.pubads().addEventListener('slotRenderEnded', function(event) {
-          // This class makes the "NPR thanks our sponsors" text visible only if an ad is returned in the request
-          if (!event.isEmpty) {
-            document.getElementById(adSlot).classList.add('has-sponsorship');
-          }
-        });
-        googletag.enableServices();
-        googletag.display(adSlot);
+      googletag.defineSlot(adUnitString, adSizeArray, 'ad-centerstage-wrap')
+        .setTargeting('ad_location_name', 'story_centerstage')
+        .addService(googletag.pubads());
+      googletag.defineSlot(adUnitString, adSizeArray, 'ad-secondary-wrap')
+        .setTargeting('ad_location_name', 'secondary')
+        .addService(googletag.pubads());
+
+      googletag.pubads().addEventListener('slotRenderEnded', function(event) {
+        // This class makes the "NPR thanks our sponsors" text visible only and only if an ad is returned in the request
+        var slotElement = document.getElementById(`${event.slot.getSlotElementId()}`);
+        if (!event.isEmpty) {
+          slotElement.classList.add('has-sponsorship');
+        } else {
+          slotElement.classList.remove('has-sponsorship')
+        }
       });
+      googletag.enableServices();
+      googletag.display('ad-centerstage-wrap');
+      googletag.display('ad-secondary-wrap');
     });
 
 // })
