--- a/src/partials/_sponsorship.html
+++ b/src/partials/_sponsorship.html
@@ -33,8 +33,8 @@ const lastNode = document.getElementsByTagName('script')[0];
 lastNode.parentNode.insertBefore(geoEdge, lastNode);
 
 // This code does not necessarily need to be wrapped in a DOMContentLoaded event
-// if the divs being referenced here are guaranteed to be in the DOM at the time its executed
-// main.concierge and #ad-centerstage-wrap
+// if the divs being referenced here are guaranteed to be in the DOM at the time it's executed
+// main.concierge and #ad-centerstage-wrap and #ad-secondary-wrap
 // window.addEventListener('DOMContentLoaded', function() {
     var adSizeArray = [[320, 50]];
     var adUnitString = '/6735/NPR.APPS/arts___life_books/book_concierge';
@@ -53,7 +53,8 @@ lastNode.parentNode.insertBefore(geoEdge, lastNode);
         adSizeArray.push([970, 250]);
     }
     // value can be set to 'true' on testing servers. Must be set to 'false' on Prod
-    var isStagingServer = 'true';
+    var isStagingServer = production ? false | true;
+    // var isStagingServer = false;
 
     window.googletag = window.googletag || {cmd: []};
     googletag.cmd.push(function() {
@@ -71,10 +72,13 @@ lastNode.parentNode.insertBefore(geoEdge, lastNode);
       googletag.pubads().addEventListener('slotRenderEnded', function(event) {
         // This class makes the "NPR thanks our sponsors" text visible only and only if an ad is returned in the request
         var slotElement = document.getElementById(`${event.slot.getSlotElementId()}`);
+        console.log(event);
         if (!event.isEmpty) {
+          console.log("add sponsorship header");
           slotElement.classList.add('has-sponsorship');
         } else {
-          slotElement.classList.remove('has-sponsorship')
+          console.log("remove sponsorship header");
+          // slotElement.classList.remove('has-sponsorship')
         }
       });
       googletag.enableServices();
