fix how production status is set

--- a/src/partials/_sponsorship.html
+++ b/src/partials/_sponsorship.html
@@ -1,4 +1,6 @@
 <script>
+var isProduction = <%= production %>;
+
 var googletag = googletag || {};
 googletag.cmd = googletag.cmd || [];
 (function() {
@@ -53,7 +55,7 @@ lastNode.parentNode.insertBefore(geoEdge, lastNode);
         adSizeArray.push([970, 250]);
     }
     // value can be set to 'true' on testing servers. Must be set to 'false' on Prod
-    var isStagingServer = production ? false : true;
+    var isStagingServer = isProduction ? false : true;
     // var isStagingServer = false;
 
     window.googletag = window.googletag || {cmd: []};
