--- a/src/partials/_webfonts.html
+++ b/src/partials/_webfonts.html
@@ -54,8 +54,8 @@ WebFont.load({
       'Source+Sans+Pro:n6'
     ],
     urls: [
-      'https://s.npr.org/templates/css/fonts/Lato.css',
-      'https://s.npr.org/templates/css/fonts/SourceSansPro.css'
+      './css/Lato.css',
+      './css/SourceSansPro.css'
     ]
   },
   timeout: 10000
