--- a/src/css/values.less
+++ b/src/css/values.less
@@ -6,6 +6,10 @@
 @desktop: ~"(max-width: 1000px)";
 @desktop-above: ~"(min-width: 1001px)";
 
+// Year scroll width fix
+@year-scroll: ~"(max-width: 830px)";
+@year-scroll-above: ~"(min-width: 830.1px)";
+
 // Fonts
 @gotham: 'Gotham SSm', Helvetica, Arial, sans-serif;
 @knockout: 'Knockout 31 4r','Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
