--- a/src/partials/_sponsorship.html
+++ b/src/partials/_sponsorship.html
@@ -38,7 +38,7 @@ lastNode.parentNode.insertBefore(geoEdge, lastNode);
 // if the divs being referenced here are guaranteed to be in the DOM at the time it's executed
 // main.concierge and #ad-centerstage-wrap and #ad-secondary-wrap
 // window.addEventListener('DOMContentLoaded', function() {
-    var adSizeArray = [[320, 50]];
+    var adSizeArray = [[300, 50]];
     var adUnitString = '/6735/NPR.APPS/arts___life_books/book_concierge';
 
     var mainColumn = document.querySelector('main.concierge');
@@ -62,7 +62,8 @@ lastNode.parentNode.insertBefore(geoEdge, lastNode);
     googletag.cmd.push(function() {
       googletag.pubads().enableSingleRequest();
       googletag.pubads().collapseEmptyDivs();
-      googletag.pubads().setTargeting('testserver', [isStagingServer]);
+      googletag.pubads().setTargeting('testserver', `${isStagingServer}`);
+      googletag.pubads().setTargeting('storyId', '1211179894');
 
       googletag.defineSlot(adUnitString, adSizeArray, 'ad-centerstage-wrap')
         .setTargeting('ad_location_name', 'story_centerstage')
@@ -80,6 +81,7 @@ lastNode.parentNode.insertBefore(geoEdge, lastNode);
         } else {
           // slotElement.classList.remove('has-sponsorship')
         }
+        
       });
       googletag.enableServices();
       googletag.display('ad-centerstage-wrap');
