more ad tidying #116

--- a/src/css/sponsorship.less
+++ b/src/css/sponsorship.less
@@ -1,6 +1,6 @@
 #ad-centerstage-wrap,
 #ad-secondary-wrap {
-    max-width: 970px;
+    // max-width: 970px;
     margin: 0 auto;
     text-align: center;
 
