--- a/src/partials/_sponsorship.html
+++ b/src/partials/_sponsorship.html
@@ -60,11 +60,6 @@ lastNode.parentNode.insertBefore(geoEdge, lastNode);
 
     window.googletag = window.googletag || {cmd: []};
     googletag.cmd.push(function() {
-      googletag.pubads().enableSingleRequest();
-      googletag.pubads().collapseEmptyDivs();
-      googletag.pubads().setTargeting('testserver', `${isStagingServer}`);
-      googletag.pubads().setTargeting('storyId', storyID);
-
       googletag.defineSlot(adUnitString, adSizeArray, 'ad-centerstage-wrap')
         .setTargeting('ad_location_name', 'story_centerstage')
         .addService(googletag.pubads());
@@ -75,15 +70,19 @@ lastNode.parentNode.insertBefore(geoEdge, lastNode);
       googletag.pubads().addEventListener('slotRenderEnded', function(event) {
         // This class makes the "NPR thanks our sponsors" text visible only and only if an ad is returned in the request
         var slotElement = document.getElementById(`${event.slot.getSlotElementId()}`);
-        // console.log(event);
         if (!event.isEmpty) {
           slotElement.classList.add('has-sponsorship');
         } else {
-          // slotElement.classList.remove('has-sponsorship')
-        }
-        
+          slotElement.classList.remove('has-sponsorship')
+        }        
       });
+
+      googletag.pubads().setTargeting('testserver', `${isStagingServer}`);
+      googletag.pubads().setTargeting('storyId', storyID);
+      googletag.pubads().enableSingleRequest();
+      googletag.pubads().collapseEmptyDivs();
       googletag.enableServices();
+
       googletag.display('ad-centerstage-wrap');
       googletag.display('ad-secondary-wrap');
     });
