--- a/src/css/print.less
+++ b/src/css/print.less
@@ -1,6 +1,7 @@
 // Print styles
 @media print {
   #ad-centerstage-wrap,
+  #ad-secondary-wrap,
   .filters .chatter,
   .filters input[type="checkbox"]:not(:checked) + label,
   .fab-form {
