--- a/src/css/sponsorship.less
+++ b/src/css/sponsorship.less
@@ -12,13 +12,13 @@
     
   &.has-sponsorship {
     &:before {
-      .lato();
-      font-size: 13px;
+      .nprSans();
+      font-size: 12px;
       content: "NPR thanks our sponsors";
       display: block;
       text-align: center;
       line-height: 1.3;
-      font-weight: 600;
+      font-weight: 500;
       -webkit-font-smoothing: antialiased;
       color: #555;
       padding: 15px;
