--- a/src/css/filters.less
+++ b/src/css/filters.less
@@ -18,7 +18,7 @@
     .sr-only;
 
     & + label {
-      .lato();
+      .nprSans();
       font-size: 13px;
       display: block;
       background: transparent;
