--- a/src/css/header.less
+++ b/src/css/header.less
@@ -36,7 +36,7 @@ header.hero {
     color: @books-offwhite;
     text-decoration: none;
     font-size: 16px;
-    .lato();
+    .nprSans();
     display: inline-block;
     margin-bottom: 1em;
 
@@ -53,7 +53,7 @@ header.hero {
 
   h1, h2 {
     color: white;
-    .lato();
+    .nprSans();
     margin: 0;
   }
 
@@ -105,7 +105,7 @@ header.hero {
   }
 
   p {
-    .lato();
+    .nprSans();
     font-size: 12px;
     margin: 0 0 1.5em 0;
 
@@ -168,7 +168,7 @@ header.hero {
       .sr-only;
 
       & + label {
-        .lato();
+        .nprSans();
         position: relative;
         cursor: pointer;
         text-transform: uppercase;
