--- a/src/partials/_webfonts.html
+++ b/src/partials/_webfonts.html
@@ -50,12 +50,10 @@ $.prototype.v=function(a,b){var c=this.d.id,d=this.d,e=this.c.u,f=this;c?(e.__we
 WebFont.load({
   custom: {
     families: [
-      'Lato:n4,n9,i4,i9',
-      'Source+Sans+Pro:n6'
+      'NPRSans:n4,n9,i4,i9'
     ],
     urls: [
-      'https://s.npr.org/templates/css/fonts/Lato.css',
-      'https://s.npr.org/templates/css/fonts/SourceSansPro.css'
+      'https://s.npr.org/templates/css/fonts/NPRSans.css'
     ]
   },
   timeout: 10000
