webfonts: rework approach, add serif for about page #128

--- a/src/css/about.less
+++ b/src/css/about.less
@@ -4,7 +4,7 @@ main.about {
   margin: auto;
 
   h2 {
-    .nprSans();
+    .sans();
     color: #454545;
     line-height: 1.5;
     margin: 0 0 .5em 0;
