--- a/src/css/sponsorship.less
+++ b/src/css/sponsorship.less
@@ -12,7 +12,7 @@
     
   &.has-sponsorship {
     &:before {
-      .nprSans();
+      .sans();
       font-size: 12px;
       content: "NPR thanks our sponsors";
       display: block;
