update labels over ads. closes #132

--- a/src/css/sponsorship.less
+++ b/src/css/sponsorship.less
@@ -14,7 +14,7 @@
     &:before {
       .sans();
       font-size: 12px;
-      content: "NPR thanks our sponsors";
+      content: "Sponsor message";
       display: block;
       text-align: center;
       line-height: 1.3;
