--- a/src/css/filters.less
+++ b/src/css/filters.less
@@ -6,6 +6,23 @@
     display: none;
   }
 
+  label[for="years"],
+  label[for="tags"] {
+    .sans-header();
+    font-size: 11px;
+    margin-bottom: 3px;
+    color: #787878;
+  }
+
+  .years-container {
+    select.years {
+      padding: 10px;
+      font-size: 14px;
+      margin-bottom: 20px;
+      width: 100%;
+    }
+  }
+
   fieldset {
     border: none;
     margin: 0 0 12px 0;
