move year tabs out of header

--- a/src/css/book.less
+++ b/src/css/book.less
@@ -1,7 +1,8 @@
 .book-detail {
   display: none;
-  padding: 0;
+  padding: 0 15px;
   max-width: 800px;
+  flex:1;
 
   @media @mobile-above {
     padding: 0 40px 20px 40px;
