--- a/src/css/catalog.less
+++ b/src/css/catalog.less
@@ -1,10 +1,11 @@
 .catalog {
   flex: 1;
   @corner: 4px;
-  padding-left: 24px;
+  padding: 0 40px 0 24px ;
 
   @media @mobile {
-    padding-left: 0;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
   [data-mode="book"] & {
