--- a/src/css/filters.less
+++ b/src/css/filters.less
@@ -1,6 +1,6 @@
 .filters {
   flex: 0 0 220px;
-  padding: 0 0 4px;
+  padding: 0 0 4px 40px;
 
   @media @mobile {
     display: none;
@@ -58,4 +58,126 @@
   }
 
   input[type="radio"]:checked + label:after { content: ""; }
+}
+
+// years in the header
+.years-container{
+  height: 40px;
+}
+.years-container fieldset {
+  margin: auto;
+  width: 80%;
+  border: none;
+  padding: 10px 0 0 20px;
+  clear: both;
+  display: flex;
+  flex-wrap: nowrap;
+
+  @media @year-scroll-above {
+    padding-top: 10px;
+    // display: block;
+  }
+
+  .loading & {
+    pointer-events: none;
+  }
+
+  input[type="checkbox"], input[type="radio"] {
+    .sr-only;
+
+    & + label {
+      .sans();
+      position: relative;
+      cursor: pointer;
+      text-transform: uppercase;
+      color: #fff;
+      padding: 8px 0;
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+      text-align: center;
+      font-size: 11px;
+      flex: 1 auto;
+      
+
+      @media @year-scroll {
+        display: inline-block;
+        margin-bottom: -8px;
+        width: floor((100% / 9) - 1);
+        margin-right: 1em;
+        padding: 8px;
+      }
+
+      @media @mobile-above {
+        font-size: 14px;
+      }
+
+      @media @year-scroll-above {
+        padding: 10px 15px;
+      }
+    }
+
+    &:hover + label,
+    &:focus + label {
+      z-index: 999;
+      background: fade(@books-offwhite, 30%);
+    }
+
+    &:focus + label {
+      // text-decoration: underline;
+    }
+
+    &:checked + label {
+      background-color: @books-offwhite;
+      font-weight: bold;
+      color: #000;
+      // color: var(--accent);
+      // border-top: 2px solid var(--accent);
+    }
+  }
+}
+
+// Scrollable tabs on smaller screens
+.years-outer-container {
+  position: relative;
+  width: 100%;
+  @media @year-scroll-above {
+    flex: 1 100%;
+    width: 80%;  
+  }
+
+  .years-cover {
+    width: 100px;
+    height: 40px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: linear-gradient(to right, rgba(0,0,0,0), 10%, var(--header, #333));
+
+    @media @year-scroll-above {
+      display: none;
+    }
+  }
+
+
+  .years-container {
+    background-color:var(--header, #333);
+    margin: 0 auto 20px auto;
+    width: 100%;
+  
+
+  @media @year-scroll {
+    // Make scrollable
+    overflow-x: scroll;
+    overflow-y: hidden;
+
+    // Fade the years on the right
+    // mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0.3) 90%, rgba(0, 0, 0, 0));
+    // -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0.3) 90%, rgba(0, 0, 0, 0));
+
+    .years {
+      // Padding at the end of scrollable area
+      padding-right: 200px;
+    }
+  }
+}
 }
