--- a/src/css/header.less
+++ b/src/css/header.less
@@ -149,8 +149,9 @@ header.hero {
 
   .outbound {
     list-style-type: none;
-    padding: 10px 0 0 0;
+    padding: 10px 0 20px 0;
     margin: 25px 0 0 0;
+    border-image: linear-gradient(to right, rgba(255,255,255,20) 0%, rgba(255,255,255,0) 70%) 1;
     border-top: 1px solid fade(white, 40%);
 
     @media @desktop-above {
@@ -158,6 +159,7 @@ header.hero {
       text-align: center;
       margin-left: auto;
       margin-right: auto;
+      border-image: none;
     }
 
     > li {
@@ -172,93 +174,6 @@ header.hero {
       }
       a:hover, a:active, a:focus {
         color: fade(white, 55%);
-      }
-    }
-  }
-
-  // years in the header
-  fieldset {
-    border: none;
-    padding: 0 0 6px 0;
-    clear: both;
-    display: flex;
-    flex-wrap: nowrap;
-
-    @media @year-scroll-above {
-      padding-top: 22px;
-      display: block;
-    }
-
-    .loading & {
-      pointer-events: none;
-    }
-
-    input[type="checkbox"], input[type="radio"] {
-      .sr-only;
-
-      & + label {
-        .sans();
-        position: relative;
-        cursor: pointer;
-        text-transform: uppercase;
-        color: #fff;
-        padding: 8px 0;
-        border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
-        text-align: center;
-        font-size: 11px;
-
-        @media @year-scroll {
-          display: inline-block;
-          margin-bottom: -8px;
-          width: floor((100% / 9) - 1);
-          margin-right: 1em;
-          padding: 8px;
-        }
-
-        @media @mobile-above {
-          font-size: 14px;
-        }
-
-        @media @year-scroll-above {
-          padding: 10px 15px;
-        }
-      }
-
-      &:hover + label,
-      &:focus + label {
-        z-index: 999;
-        background: fade(@books-offwhite, 30%);
-      }
-
-      &:focus + label {
-        // text-decoration: underline;
-      }
-
-      &:checked + label {
-        background-color: @books-offwhite;
-        font-weight: bold;
-        color: #000;
-        // color: var(--accent);
-        // border-top: 2px solid var(--accent);
-      }
-    }
-  }
-
-  // Scrollable tabs on smaller screens
-  .years-container {
-    @media @year-scroll {
-      // Make scrollable
-      overflow-x: scroll;
-      overflow-y: hidden;
-
-      // Fade the years on the right
-      mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0.3) 90%, rgba(0, 0, 0, 0));
-      -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0.3) 90%, rgba(0, 0, 0, 0));
-
-      .years {
-        // Padding at the end of scrollable area
-        padding-right: 200px;
       }
     }
   }
