update newsletter callout styling

--- a/src/css/book.less
+++ b/src/css/book.less
@@ -156,6 +156,8 @@
 
 .newsletter-callout {
   a {
-    color: var(--header, #333)
+    color: var(--header, #333);
+    font-weight: 900;
+    text-decoration: none;
   }
 }
