move bottom sponsor to right column

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -22,6 +22,20 @@ main.concierge {
   }
 }
 
+.right-side {
+  display: flex;
+  flex-flow: row wrap;
+  flex: 1;
+}
+
+.catalog-covers, .catalog-list {
+  flex: 1 100%;
+}
+
+#ad-secondary-wrap {
+  flex: 1 100%;
+}
+
 h3 {
   display: block;
   margin: 0;
