--- a/src/partials/_sponsorship.html
+++ b/src/partials/_sponsorship.html
@@ -40,7 +40,7 @@ lastNode.parentNode.insertBefore(geoEdge, lastNode);
     var adUnitString = '/6735/n6735.NPR/arts___life_books/book_concierge';
     var storyID = '1211179894';
 
-    var mainColumn = document.querySelector('main.concierge');
+    var mainColumn = document.querySelector('div.right-side');
     var columnWidth = window.innerWidth;
     if (mainColumn) {
         columnWidth = mainColumn.offsetWidth;
