add parametric filter ordering and sections

--- a/src/css/filters.less
+++ b/src/css/filters.less
@@ -60,6 +60,11 @@
   input[type="radio"]:checked + label:after { content: ""; }
 }
 
+.section-separator {
+  height: 20px;
+  background-color: #ebe9e5;
+}
+
 // years in the header
 
 .years-container fieldset {
