--- a/src/css/filters.less
+++ b/src/css/filters.less
@@ -133,6 +133,7 @@
       background-color: @books-offwhite;
       font-weight: bold;
       color: #000;
+      margin-bottom: -1px;
       // color: var(--accent);
       // border-top: 2px solid var(--accent);
     }
