fix hairlines on book filter list

--- a/src/css/filters.less
+++ b/src/css/filters.less
@@ -62,7 +62,8 @@
 
 .section-separator {
   height: 20px;
-  background-color: #ebe9e5;
+  background-color: @books-offwhite;
+  margin: 0 -1px;
 }
 
 // years in the header
